<resources>
    <string name="app_name">ParkX</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_to_parkx">Welcome to PARKX!</string>
    <string name="item_title">Item_title</string>
    <string name="item_detail">Item_detail</string>
    <string name="item_image_description">Item_image_description</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="sign_up_here">Sign Up here!</string>
    <string name="sign_in_here">Sign In here!</string>
    <string name="you_already_have_an_account">You already have an account?</string>
    <string name="please_fill_in_all_fields">Please fill in all fields.</string>
    <string name="search">Search</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="invalid_credentials">Invalid email or password</string>
    <string name="authRest_generic_error">"An error occurred: "</string>
    <string name="network_error">Network error. Please check your internet connection.</string>
    <string name="generic_error">"Unexpected error: "</string>
    <string name="email_already_in_use">This email is in use. Please choose a different one</string>
    <string name="not_valid_email">Please enter a valid Email</string>
    <string name="log_out">Log out</string>
    <string name="searching_parking_spot">Searching parking spot inside a 1000m radius from the marker</string>
    <string name="make_a_request">Make a request</string>
    <string name="parking_spot_question">Do you want to add this parking spot ?</string>
    <string name="add_parking_spot">Add parking spot</string>
    <string name="parking_spot_added">Parking spot added</string>
    <string name="error_mismatched_data">Error: Mismatched data</string>
    <string name="error_no_data_available">Error: No data available</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="datetime">DateTime</string>
    <string name="requests_sent">Requests sent</string>
    <string name="requests_received">Requests Received</string>
    <string name="my_parking_spots">My Parking spots</string>
</resources>